corrections to my bodies overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -366,6 +366,10 @@ footer:hover {
     visibility: hidden;
   }
 
+  main {
+    overflow: hidden;
+  }
+
   .searchbar {
     padding-left: 8%;
   }
